add 2 columns, change borders and colors of background

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
 											If you are annoyed by ticks, pops, crackles and clicks while listening to your favorite recordings, this tool is probably for you.">
 											
 		<title>RemoveTheSpike - impulse disturbance elimination</title>
-		<link rel="stylesheet" href="css/style.css"> 		
+		<link rel="stylesheet" href="css/style.css">
+		<script src="https://kit.fontawesome.com/0a44030097.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 	
