--- a/index.html
+++ b/index.html
@@ -7,29 +7,53 @@
 											If you are annoyed by ticks, pops, crackles and clicks while listening to your favorite recordings, this tool is probably for you.">
 											
 		<title>RemoveTheSpike - impulse disturbance elimination</title>
-		<link rel="stylesheet" href="css/style.css"> 
+		<link rel="stylesheet" href="css/style.css">
+		<script src="https://kit.fontawesome.com/0a44030097.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 	
-	<header>
-	<h1>RemoveTheSpike</h1>
-	</header>
+	<div class="topcontainer">
+		<header>
+		<h1>RemoveTheSpike</h1>
+		</header>
+		
+		<nav>
+			<ul class="menucontent">
+				<li class="menucontent"><a href="index.html">Home</a></li>
+				<li class="menucontent"><a href="howitworks.html">How it works</a></li>
+				<li class="menucontent"><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
 	
-	<nav>
-		<ul class="menucontent">
-			<li class="menucontent"><a href="index.html">Home</a></li>
-			<li class="menucontent"><a href="howitworks.html">How it works</a></li>
-			<li class="menucontent"><a href="contact.html">Contact</a></li>
-		</ul>
+	<main class="maincontent">
+		<section class="row">
 
-	</nav>
-	
-	<main>
-		<section>
-			<h2>Welcome</h2>
+			<div class="leftcolumn">
+				<div class="card">
+					<h2>Welcome</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inde igitur, inquit, ordiendum est. <mark>Negat enim summo bono afferre incrementum diem.</mark> <a href="http://loripsum.net/" target="_blank">At certe gravius.</a> <a href="http://loripsum.net/" target="_blank">Recte, inquit, intellegis.</a> Duo Reges: constructio interrete. <b>Apparet statim, quae sint officia, quae actiones.</b> <b>Nihil opus est exemplis hoc facere longius.</b> Quis non odit sordidos, vanos, leves, futtiles? Quae enim adhuc protulisti, popularia sunt, ego autem a te elegantiora desidero. </p>
 
+<p><a href="http://loripsum.net/" target="_blank">Videsne quam sit magna dissensio?</a> Sequitur disserendi ratio cognitioque naturae; <a href="http://loripsum.net/" target="_blank">Maximus dolor, inquit, brevis est.</a> <i>Quare conare, quaeso.</i> Ut alios omittam, hunc appello, quem ille unum secutus est. <mark>Dicimus aliquem hilare vivere;</mark> Pudebit te, inquam, illius tabulae, quam Cleanthes sane commode verbis depingere solebat. In his igitur partibus duabus nihil erat, quod Zeno commutare gestiret. </p>
+
+<p>Videsne quam sit magna dissensio? <b>Praeclare hoc quidem.</b> Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Id enim volumus, id contendimus, ut officii fructus sit ipsum officium. Me igitur ipsum ames oportet, non mea, si veri amici futuri sumus. </p>
+
+				</div>
+			</div>
+
+			<div class="rightcolumn">
+				<div class="card">
+					<h2>Last post</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inde igitur, inquit, ordiendum est. <mark>Negat enim summo bono afferre incrementum diem.</mark> <a href="http://loripsum.net/" target="_blank">At certe gravius.</a> <a href="http://loripsum.net/" target="_blank">Recte, inquit, intellegis.</a> Duo Reges: constructio interrete. <b>Apparet statim, quae sint officia, quae actiones.</b> <b>Nihil opus est exemplis hoc facere longius.</b> Quis non odit sordidos, vanos, leves, futtiles? Quae enim adhuc protulisti, popularia sunt, ego autem a te elegantiora desidero. </p>
+
+<p><a href="http://loripsum.net/" target="_blank">Videsne quam sit magna dissensio?</a> Sequitur disserendi ratio cognitioque naturae; <a href="http://loripsum.net/" target="_blank">Maximus dolor, inquit, brevis est.</a> <i>Quare conare, quaeso.</i> Ut alios omittam, hunc appello, quem ille unum secutus est. <mark>Dicimus aliquem hilare vivere;</mark> Pudebit te, inquam, illius tabulae, quam Cleanthes sane commode verbis depingere solebat. In his igitur partibus duabus nihil erat, quod Zeno commutare gestiret. </p>
+
+<p>Videsne quam sit magna dissensio? <b>Praeclare hoc quidem.</b> Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Id enim volumus, id contendimus, ut officii fructus sit ipsum officium. Me igitur ipsum ames oportet, non mea, si veri amici futuri sumus. </p>
+
+
+				</div>
+			</div>
 		</section>
-		<aside></aside>
 	</main>
 	
 	<footer>
