--- a/howitworks.html
+++ b/howitworks.html
@@ -8,6 +8,7 @@
 											
 		<title>RemoveTheSpike - impulse disturbance elimination</title>
 		<link rel="stylesheet" href="css/style.css"> 
+		<script src="https://kit.fontawesome.com/0a44030097.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 	
