change the way image is displayed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 	
 	<div class="topcontainer">
 		<header>
-		<h1>RemoveTheSpike</h1>
+			<div class="imagecontainer">
+				<img src="img/header_background.PNG">
+				<div class="centeredtext">RemoveTheSpike</div>
+			</div>
 		</header>
 		
 		<nav>
@@ -32,24 +35,18 @@
 			<div class="leftcolumn">
 				<div class="card">
 					<h2>Welcome</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inde igitur, inquit, ordiendum est. <mark>Negat enim summo bono afferre incrementum diem.</mark> <a href="http://loripsum.net/" target="_blank">At certe gravius.</a> <a href="http://loripsum.net/" target="_blank">Recte, inquit, intellegis.</a> Duo Reges: constructio interrete. <b>Apparet statim, quae sint officia, quae actiones.</b> <b>Nihil opus est exemplis hoc facere longius.</b> Quis non odit sordidos, vanos, leves, futtiles? Quae enim adhuc protulisti, popularia sunt, ego autem a te elegantiora desidero. </p>
-
-<p><a href="http://loripsum.net/" target="_blank">Videsne quam sit magna dissensio?</a> Sequitur disserendi ratio cognitioque naturae; <a href="http://loripsum.net/" target="_blank">Maximus dolor, inquit, brevis est.</a> <i>Quare conare, quaeso.</i> Ut alios omittam, hunc appello, quem ille unum secutus est. <mark>Dicimus aliquem hilare vivere;</mark> Pudebit te, inquam, illius tabulae, quam Cleanthes sane commode verbis depingere solebat. In his igitur partibus duabus nihil erat, quod Zeno commutare gestiret. </p>
-
-<p>Videsne quam sit magna dissensio? <b>Praeclare hoc quidem.</b> Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Id enim volumus, id contendimus, ut officii fructus sit ipsum officium. Me igitur ipsum ames oportet, non mea, si veri amici futuri sumus. </p>
-
+					<p>
+					    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
 				</div>
 			</div>
 
 			<div class="rightcolumn">
 				<div class="card">
 					<h2>Last post</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inde igitur, inquit, ordiendum est. <mark>Negat enim summo bono afferre incrementum diem.</mark> <a href="http://loripsum.net/" target="_blank">At certe gravius.</a> <a href="http://loripsum.net/" target="_blank">Recte, inquit, intellegis.</a> Duo Reges: constructio interrete. <b>Apparet statim, quae sint officia, quae actiones.</b> <b>Nihil opus est exemplis hoc facere longius.</b> Quis non odit sordidos, vanos, leves, futtiles? Quae enim adhuc protulisti, popularia sunt, ego autem a te elegantiora desidero. </p>
-
-<p><a href="http://loripsum.net/" target="_blank">Videsne quam sit magna dissensio?</a> Sequitur disserendi ratio cognitioque naturae; <a href="http://loripsum.net/" target="_blank">Maximus dolor, inquit, brevis est.</a> <i>Quare conare, quaeso.</i> Ut alios omittam, hunc appello, quem ille unum secutus est. <mark>Dicimus aliquem hilare vivere;</mark> Pudebit te, inquam, illius tabulae, quam Cleanthes sane commode verbis depingere solebat. In his igitur partibus duabus nihil erat, quod Zeno commutare gestiret. </p>
-
-<p>Videsne quam sit magna dissensio? <b>Praeclare hoc quidem.</b> Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Id enim volumus, id contendimus, ut officii fructus sit ipsum officium. Me igitur ipsum ames oportet, non mea, si veri amici futuri sumus. </p>
-
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
 
 				</div>
 			</div>
