update the contact and howitworks

--- a/howitworks.html
+++ b/howitworks.html
@@ -12,17 +12,22 @@
 	</head>
 	<body>
 	
-	<header>
-	<h1>RemoveTheSpike</h1>
-	</header>
-	
-	<nav>
-		<ul class="menucontent">
-			<li class="menucontent"><a href="index.html">Home</a></li>
-			<li class="menucontent"><a href="howitworks.html">How it works</a></li>
-			<li class="menucontent"><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
+	<div class="topcontainer">
+		<header>
+			<div class="imagecontainer">
+				<img src="img/header_background.PNG">
+				<div class="centeredtext">RemoveTheSpike</div>
+			</div>
+		</header>
+		
+		<nav>
+			<ul class="menucontent">
+				<li class="menucontent"><a href="index.html">Home</a></li>
+				<li class="menucontent"><a href="howitworks.html">How it works</a></li>
+				<li class="menucontent"><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
 	
 	<main>
 		<section>
