add cards to the howitworks and contact pages

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 	<div class="topcontainer">
 		<header>
 			<div class="imagecontainer">
-				<img src="img/header_background.PNG">
-				<div class="centeredtext">RemoveTheSpike</div>
+				<img src="img/rysunek4.png">
 			</div>
 		</header>
 		
@@ -29,7 +28,7 @@
 		</nav>
 	</div>
 	
-	<main class="maincontent">
+	<main>
 		<section class="row">
 
 			<div class="leftcolumn">
